Fix header overflow problem on iOS

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -84,6 +84,10 @@ header {
     margin: 0;
     height: 4rem;
   }
+
+  body.noscroll {
+    overflow: visible;
+  }
 }
 
 
